# SUNDR

./: README.md  pyproject.toml
scripts/: setup.sh
sundr/types/: principal.py
