[project]
name = "SUNDR"
authors = [{ name = "shejialuo", email = "shejialuo@gmail.com" }]
maintainers = [{ name = "shejialuo", email = "shejialuo@gmail.com"}]
description = "An implementation of Secure Untrusted Data Repository"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["llfuse"]
requires-python = ">=3.10"
keywords = [""]
classifiers = [
  "Topic :: Security",
  "Topic :: System",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

urls = { "Homepage" = "https://github.com/shejialuo/SUNDR" }

dynamic = ["version"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { from = "sundr/__init__.py" }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
atomic = true
filter_files = true
